# ai-tests

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: cnae-monitor.yml
.obsidian/: workspace.json
@todo/: CONTEXT.md  FUTURE.md  PROJECT_IDEA.MD
@todo/MVP/: PLAN.md  PROGRESS.md
@todo/MVP-SAAS/: ARCHITECTURE.md  CONTEXT.md  PLAN-REVALIDATE-MVP.md  PROGRESS.md  README.md
@todo/MVP-SAAS/FEATURES/: README.md
@todo/MVP-SAAS/PRICING/: BENCHMARK-PLAN.md  README.md  REVALIDATION.md  (+5 more)
@todo/SAAS-CHATBOT/: ARCHITECTURE.md  CONTEXT.md  PLAN.md  PRICING.md  PROGRESS.md  REVIEW-FIXES-1.md  REVIEW-FIXES-2.md  REVIEW-FIXES-3.md  VALIDATION-PROMPTS.md
@todo/embedding-adapters/: CONTEXT.md  FUTURE.md
@todo/llm-adapters/: CONTEXT.md  FUTURE.md
@todo/my-linter/: CONTEXT.md
@todo/router-adapters/: CONTEXT.md  CRON.md  PLAN.md  README.md
CNAE-Checker/: CNAE20_EstruturaDetalhada.xls  check-extraction.js  cnae.json  extract.js
app/: __init__.py
app/api/: __init__.py
app/embeddings/: __init__.py  cache.py
app/services/: __init__.py  matcher_service.py
app/similarity/: port.py
bruno/: bruno.json  match-invalid.bru
bruno/benchmarks/: 01-medico-formal.bru  03-coloquial-paciente.bru  05-edge-cases.bru
bruno/environments/: local.bru
docs/adr/: 001-embedding-adapter-pattern.md
pkgs/cnae-checker/: README.md  package-lock.json  package.json
pkgs/estimation-framework/: SYSTEM_PROMPT.md  index.html
pkgs/ops-review-scrapper/: PROJECT_SPECIFICATION.md
pkgs/similarity-score/: Makefile  README.md
tests/: conftest.py  test_thresholds.py
(+170 files in other folders)
